Fri May 29 07:57:47 GMT 2015  Olly Betts <olly@survex.com>

	* common/serialise-double.cc: Prefer scalbn() to ldexp() where
	  where possible, since the former doesn't ever set errno.

Fri May 29 07:47:46 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Revert disabling of part of adddoc5 for clang, as
	  that should now work now the method in question isn't marked as
	  XAPIAN_PURE_FUNCTION.

Fri May 29 06:13:32 GMT 2015  Olly Betts <olly@survex.com>

	* api/sortable-serialise.cc,tests/queryparsertest.cc,
	  tests/unittest.cc: Only enable assertions in sortable_serialise()
	  and sortable_unserialise() in the testsuite (since these functions
	  shouldn't throw exceptions), and move the tests of these functions
	  from queryparsertest to unittest to facilitate this.

Fri May 29 05:40:10 GMT 2015  Olly Betts <olly@survex.com>

	* api/sortable-serialise.cc,include/xapian/queryparser.h: Make
	  sortable_serialise() an inlined wrapper around a function which
	  won't throw and can be flagged as XAPIAN_CONST_FUNCTION.

Fri May 29 05:35:23 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: sortable_unserialise() can't validly
	  be marked as XAPIAN_CONST_FUNCTION, since scalbn() can raise
	  FE_OVERFLOW or FE_UNDERFLOW floating point exceptions.  It isn't
	  a function that's likely to be called such that the result can
	  be usefully subject to CSE or eliminated as dead code anyway.

Fri May 29 05:31:29 GMT 2015  Olly Betts <olly@survex.com>

	* api/sortable-serialise.cc: Use scalbn() instead of ldexp() in
	  sortable_unserialise(), as ldexp() can set errno, which it seems
	  better to avoid doing.

Fri May 29 05:15:09 GMT 2015  Olly Betts <olly@survex.com>

	* api/sortable-serialise.cc,include/xapian/queryparser.h: Tweak
	  sortable_unserialise() not to construct std::string objects (as that
	  could throw std::bad_alloc), and mark it as XAPIAN_NOTHROW.

Thu May 28 13:49:37 GMT 2015  Olly Betts <olly@survex.com>
